[Cronet] Use WeakPtr in CronetBidirectionalStream on iOS.

BUG=650782

Review-Url: https://codereview.chromium.org/2369053002
Cr-Commit-Position: refs/heads/master@{#421302}

Former-commit-id: ce9fb501c0aa11c21d26f7701c3fdf542fb58c22